[gd_scene load_steps=2 format=3 uid="uid://cefaakk1wcme5"]

[ext_resource type="Script" path="res://scripts/success_messages_reader.gd" id="1_6ovto"]

[node name="SuccessMessagesReader" type="Node2D"]
script = ExtResource("1_6ovto")

[node name="Next" type="Button" parent="."]
offset_left = 409.0
offset_top = 821.0
offset_right = 646.0
offset_bottom = 929.0
text = "Next"

[node name="Previous" type="Button" parent="."]
offset_left = 94.0
offset_top = 821.0
offset_right = 320.0
offset_bottom = 929.0
disabled = true
text = "Previous
"

[node name="Close" type="Button" parent="."]
offset_left = 94.0
offset_top = 964.0
offset_right = 645.0
offset_bottom = 1028.0
disabled = true
text = "End game and back to main menu"

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
